# rustacean_roborescue

./: .build_h264_republisher.sh  .build_ros2_webrtc.sh  .clang-format  .claudeignore  .gitignore  .gitmodules  .pre-commit-config.yaml  CONTRIBUTING.md  Justfile  LICENSE  NIX.md  README.md  docker-compose.yml  flake.nix  flake.nix.bak  nix-env.fish  pyproject.toml  requirements-dev.txt  result
deploy/: 99-robot.rules  (+6 more)
main_ws/:    .sccache.toml  Cargo.lock.bak  Cargo.toml  Justfile  Makefile  README.md  build.bash  build_all.bash  build_all.sh  check_devs.sh  clippy.toml  generate_certs.sh  log.txt  rustfmt.toml  test_all_functions.py  test_arm_controller.py  topology.mmd
main_ws/.cache/clangd/index/: KissICP.cpp.FA2932A010B85650.idx  KissICP.hpp.33D7FAA733649C69.idx  Metrics.cpp.BC57A95D773354B7.idx  Metrics.hpp.C39BAB0073F5B55C.idx  Preprocessing.cpp.F532A665E392C2C6.idx  Preprocessing.hpp.8EB062A6C7B89BA0.idx  Registration.cpp.EEEB0C0D7B60836E.idx  Registration.hpp.A3C9E29716543A3E.idx  Threshold.cpp.E47F6EF210DBAE85.idx  Threshold.hpp.1A69F9D982D2DCF6.idx  VoxelHashMap.cpp.B58C0C6133F76C63.idx  VoxelHashMap.hpp.A2607DA7F7B8AB34.idx  VoxelUtils.cpp.8586F54F10A04FB6.idx  VoxelUtils.hpp.DE73B422A823C3F3.idx
main_ws/.cargo/: config.toml  config.toml.bak
main_ws/launch/: robot_and_signaling.launch.py
main_ws/memo/: calibration_guide.md
main_ws/src/: README.md
main_ws/src/audio_bridge/: README.md  package.xml  setup.cfg  setup.py
main_ws/src/audio_bridge/audio_bridge/: audio_receiver_node.py  audio_sender_node.py
main_ws/src/bringup/: CMakeLists.txt  README.md  package.xml
main_ws/src/bringup/config/: arm_controller.yaml  arm_driver.yaml  arm_gripper_driver.yaml  cameras.yaml  crawler_driver.yaml  dummy_imu.yaml  fix_pointcloud_time.yaml  flipper_driver.yaml  gripper_driver.yaml  imu_hwt901b.yaml  joy_controller.yaml  kiss_icp.yaml  launch_config.yaml  nav2_params.yaml  pointcloud_to_laserscan.yaml  ros2_control_controllers.yaml  sensor_gateway.yaml  slam_toolbox_async.yaml  spark_fast_lio_min.yaml  usb_cam_params.yaml  velodyne_driver.yaml  velodyne_pointcloud.yaml  zenoh_ope.json5  zenoh_operator.json5  zenoh_robot.json5  zenoh_router.json5
main_ws/src/bringup/launch/: audio.launch.py  camera.launch.py  control.launch.py  display.launch.py  foxglove_viz.launch.py  launch.py  mock_visualize.launch.py  nav2.launch.py  network.launch.py  perception.launch.py  simulation.launch.py  system.launch.py  test_arm.launch.py  test_ik.launch.py
main_ws/src/bringup/rviz/: display.rviz  simulation.rviz
main_ws/src/bringup/scripts/: arm_cmd_bridge.py  arm_gz_bridge.py  arm_mock_driver.py  arm_teleop.py  crawler_vel_bridge.py  demo_joints.py  dummy_imu_node.py  ffmpeg_to_foxglove_video.py  fix_pointcloud_time_node.py  jpeg_republish.py  odom_selector.py  odom_tf_bridge.py  save_pointcloud.py  teleop_joints.py
main_ws/src/bringup/urdf/: robot.urdf.xacro  sekirei.urdf
main_ws/src/bringup/worlds/: rescue_field.sdf  rescue_field.world  rescue_field_headless.sdf
main_ws/src/control/arm_controller/: Cargo.toml  README.md  package.xml
main_ws/src/control/joy_controller/: CMakeLists.txt  MEMO.md  README.md  package.xml
main_ws/src/control/joy_operator/: Cargo.toml  package.xml
main_ws/src/control/moveit/: package.xml
main_ws/src/custom_interfaces/: CMakeLists.txt  package.xml
main_ws/src/custom_interfaces/msg/: AudioChunk.msg  CrawlerVelocity.msg  DetectedObject.msg  DetectedObjectArray.msg  FlipperVelocity.msg  GripperCommand.msg  GripperStatus.msg
main_ws/src/drive_controller/: Cargo.toml
main_ws/src/extras/h264_republisher/: .colconignore  CMakeLists.txt  README.md
main_ws/src/flipper_driver/: Cargo.toml  README.md  package.xml
main_ws/src/flipper_driver/src/: driver.rs  main.rs
main_ws/src/h264_republisher/: CMakeLists.txt  package.xml
main_ws/src/h264_republisher/src/: h264_republisher.cpp
main_ws/src/hardware_drivers/: README.md
main_ws/src/hardware_drivers/arm_driver/: Cargo.toml  DOCS.md  README.md  package.xml
main_ws/src/hardware_drivers/crawler_driver/: CMakeLists.txt  Cargo.toml  README.md  package.xml
main_ws/src/hardware_drivers/crawler_driver_rust/: Cargo.toml  package.xml
main_ws/src/hardware_drivers/depth_guard/: Cargo.toml  package.xml
main_ws/src/hardware_drivers/flipper_driver/: CMakeLists.txt  Cargo.toml  package.xml
main_ws/src/hardware_drivers/flipper_driver_rust/: Cargo.toml  package.xml
main_ws/src/hardware_drivers/gripper_driver/: Cargo.toml  package.xml
main_ws/src/hardware_drivers/sensor_gateway/: Cargo.toml  README.md  package.xml
main_ws/src/perception/arm_imu/: ARM_IMU_NOTES.md  CMakeLists.txt  package.xml  todo.md
main_ws/src/perception/omron_bridge/: README.md  package.xml  setup.cfg  setup.py
main_ws/src/perception/qr_detector/: package.xml  setup.py
main_ws/src/perception/qr_detector_cpp/: CMakeLists.txt  package.xml
main_ws/src/perception/robo_map_exporter/: README.md  package.xml  setup.cfg  setup.py
main_ws/src/perception/ros2_webrtc/: README.md  package.xml  setup.py
main_ws/src/perception/vision_processor/: Cargo.toml  Makefile  README.md  package.xml
main_ws/src/robot_bringup/: CMakeLists.txt  package.xml
main_ws/src/robot_bringup/config/: usb_cam_params.yaml
main_ws/src/robot_bringup/launch/: camera.launch.py
main_ws/src/robot_interfaces/: package.xml
main_ws/src/track_driver/: Cargo.toml
main_ws/src/vision_processor/: Cargo.toml  README.md
main_ws/src/vision_processor/src/: main.rs
main_ws/topology/: network_topology.mmd  system_topology.mmd
operator_ws/src/gst_webrtc_operator/: README.md  package.xml  setup.py
operator_ws/src/h264_republisher/: package.xml  setup.py
sandbox/demo_arm/: README.md  package.xml
sandbox/demo_arm/include/: arm_controller.hpp  arm_ik.h
sandbox/demo_arm/launch/: demo_arm_from_joy.launch  demo_joy.launch  display.launch  test_arm.launch
sandbox/demo_arm/rviz/: arm.rviz
sandbox/demo_arm/src/: arm_controller.cpp  demo_arm_ctl.cpp  demo_arm_operator.cpp  demo_arm_state.cpp  dxl_test.cpp
sandbox/demo_arm/urdf/: sekirei.urdf
(+109 files in other folders)
