[workspace]
# ビルド対象のパッケージを指定
members = [
    "src/control/arm_controller",
    "src/hardware_drivers/sensor_gateway",
    "src/hardware_drivers/arm_driver",
]

# 依存関係の解決ルール（Rust 2021以降の推奨）
resolver = "2"

exclude = [
    "src/perception/vision_processor",
]

[patch.crates-io]
# rclrsはソースを参照させる
# crates.ioからとってくるのは地雷なのでやらない！！！
rclrs = { path = "src/external/ros2_rust/rclrs" }

# メッセージ型は「ビルド生成物 (installフォルダ)」を参照させる
# これがないと "No such file" エラーになる
action_msgs = { path = "install/share/action_msgs/rust" }
geometry_msgs = { path = "install/share/geometry_msgs/rust" }
nav_msgs = { path = "install/share/nav_msgs/rust" }
sensor_msgs = { path = "install/share/sensor_msgs/rust" }
std_msgs = { path = "install/share/std_msgs/rust" }
builtin_interfaces = { path = "install/share/builtin_interfaces/rust" }
rcl_interfaces = { path = "install/share/rcl_interfaces/rust" }
rosgraph_msgs = { path = "install/share/rosgraph_msgs/rust" }
statistics_msgs = { path = "install/share/statistics_msgs/rust" }
trajectory_msgs = { path = "install/share/trajectory_msgs/rust" }
visualization_msgs = { path = "install/share/visualization_msgs/rust" }

service_msgs = { path = "install/share/service_msgs/rust" }
unique_identifier_msgs = { path = "install/share/unique_identifier_msgs/rust" }
custom_interfaces = { path = "install/share/custom_interfaces/rust" }
