<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>audio_bridge</name>
  <version>0.1.0</version>
  <description>
    Bidirectional voice communication over ROS 2 topics using GStreamer + Opus.
    Replaces ros2_webrtc: no WebRTC/signaling needed when both ends are ROS 2 nodes
    on the same LAN (Zenoh handles transport).
  </description>
  <maintainer email="yano.tatsuki439@mail.kyutech.jp">root</maintainer>
  <license>Apache-2.0</license>

  <depend>rclpy</depend>
  <depend>custom_interfaces</depend>
  <exec_depend>python3-gi</exec_depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
