<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>bringup</name>
  <version>0.0.0</version>
  <description>Launch, config, URDF, and scripts for rescue robot bringup</description>
  <maintainer email="yano.tatsuki439@mail.kyutech.jp">rodep</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>sensor_msgs_py</exec_depend>
  <exec_depend>python3-numpy</exec_depend>
  <exec_depend>xacro</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>ros_gz_sim</exec_depend>
  <exec_depend>ros_gz_bridge</exec_depend>
  <exec_depend>pointcloud_to_laserscan</exec_depend>
  <exec_depend>velodyne_driver</exec_depend>
  <exec_depend>velodyne_pointcloud</exec_depend>
  <exec_depend>custom_interfaces</exec_depend>
  <exec_depend>foxglove_msgs</exec_depend>
  <exec_depend>ffmpeg_image_transport_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <!-- ros2_control (arm_backend:=ros2_control 時) -->
  <exec_depend>controller_manager</exec_depend>
  <exec_depend>forward_command_controller</exec_depend>
  <exec_depend>joint_trajectory_controller</exec_depend>
  <exec_depend>joint_state_broadcaster</exec_depend>
  <exec_depend>dynamixel_hardware_interface</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
