<?xml version="1.0"?>
<package format="3">
  <name>gst_webrtc_operator</name>
  <version>0.1.0</version>
  <description>Operator-side GStreamer WebRTC ROS2 node (receiver)</description>
  <maintainer email="dev@example.com">RoboRescue</maintainer>
  <license>Apache-2.0</license>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>python3</exec_depend>

  <buildtool_depend>ament_python</buildtool_depend>
</package>
