<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>arm_controller</name>
  <version>0.1.0</version>
  <description>Arm controller node using k crate for IK/FK</description>
  <maintainer email="yano.tatsuki439@mail.kyutech.jp">lazytatzv</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cargo</buildtool_depend>

  <depend>rclrs</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>visualization_msgs</depend>
  <depend>builtin_interfaces</depend>

  <!-- Cargo workspace patches reference these; all must exist in install/ before Cargo resolves -->
  <build_depend>action_msgs</build_depend>
  <build_depend>actionlib_msgs</build_depend>
  <build_depend>composition_interfaces</build_depend>
  <build_depend>custom_interfaces</build_depend>
  <build_depend>diagnostic_msgs</build_depend>
  <build_depend>lifecycle_msgs</build_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>rcl_interfaces</build_depend>
  <build_depend>rosgraph_msgs</build_depend>
  <build_depend>service_msgs</build_depend>
  <build_depend>shape_msgs</build_depend>
  <build_depend>statistics_msgs</build_depend>
  <build_depend>std_srvs</build_depend>
  <build_depend>stereo_msgs</build_depend>
  <build_depend>trajectory_msgs</build_depend>
  <build_depend>type_description_interfaces</build_depend>
  <build_depend>unique_identifier_msgs</build_depend>

  <export>
    <build_type>ament_cargo</build_type>
  </export>
</package>
