<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>sekirei_moveit</name>
  <version>0.0.0</version>
  <description>MoveIt2 configuration for sekirei arm (servo + planning)</description>
  <maintainer email="yano.tatsuki439@mail.kyutech.jp">rodep</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>moveit_ros_move_group</exec_depend>
  <exec_depend>moveit_servo</exec_depend>
  <exec_depend>moveit_kinematics</exec_depend>
  <exec_depend>moveit_planners_ompl</exec_depend>
  <exec_depend>bringup</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
