<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>arm_driver</name>
  <version>0.1.0</version>
  <description>Dynamixel position-control driver for 6-DOF arm (XM series)</description>
  <maintainer email="yano.tatsuki439@mail.kyutech.jp">lazytatzv</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cargo</buildtool_depend>

  <depend>rclrs</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>builtin_interfaces</depend>
  <depend>visualization_msgs</depend>
  <depend>custom_interfaces</depend>

  <export>
    <build_type>ament_cargo</build_type>
  </export>
  <url type="doc">README.md</url>
</package>
