<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>crawler_driver</name>
  <version>0.0.0</version>
  <description>Roboclaw motor driver for differential-drive crawler</description>
  <maintainer email="yano.tatsuki439@mail.kyutech.jp">rodep</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  <test_depend>ament_cmake_gtest</test_depend>


  <depend>rclcpp</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>custom_interfaces</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
