<?xml version="1.0"?>
<package format="3">
  <name>omron_bridge</name>
  <version>0.0.0</version>
  <description>Bridge node to publish OMRON 2JCIE-BU01 sensor data to ROS2 topics</description>
  <maintainer email="you@example.com">team</maintainer>
  <license>Apache-2.0</license>
  <buildtool_depend>ament_python</buildtool_depend>
  <exec_depend>rclpy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>python3</exec_depend>
  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
