<?xml version="1.0"?>
<package format="3">
  <name>robo_map_exporter</name>
  <version>0.0.0</version>
  <description>RoboCup mapping exporter (PLY/CSV) PoC</description>
  <maintainer email="you@example.com">Team</maintainer>
  <license>Apache-2.0</license>
  <buildtool_depend>ament_cmake</buildtool_depend>
  <exec_depend>rclpy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
