<?xml version="1.0"?>
<package format="2">
  <name>ros2_webrtc</name>
  <version>0.1.0</version>
  <description>ROS2-managed WebRTC audio components (signaling + GStreamer nodes)</description>
  <maintainer email="you@example.com">You</maintainer>
  <license>Apache-2.0</license>
  <build_type>ament_python</build_type>
  <depend>rclpy</depend>
  <depend>std_msgs</depend>
  <exec_depend>python3-aiohttp</exec_depend>
  <exec_depend>python3-gi</exec_depend>
</package>
