<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>vision_processor</name>
  <version>0.1.0</version>
  <description>OpenCV-based vision processor (QR detection, image processing)</description>
  <maintainer email="yano.tatsuki439@mail.kyutech.jp">lazytatzv</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cargo</buildtool_depend>

  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>visualization_msgs</depend>

  <export>
    <build_type>ament_cargo</build_type>
  </export>
</package>
